# multi-agent-research-pipeline

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 514c0ba0f846_initial_schema_with_auth.py
backend/app/: cache.py  config.py  logging.py  main.py
backend/app/agents/: __init__.py  graph.py  llm.py  planner.py  reader.py  searcher.py  state.py  writer.py
backend/app/api/: auth.py  metrics.py  report.py  research.py  router.py  runs.py  websocket.py
backend/app/auth/: dependencies.py  encryption.py  jwt.py  password.py
backend/app/middleware/: rate_limit.py
backend/app/models/: __init__.py  agent_step.py  extracted_content.py  run.py  search_result.py  step_metrics.py  user.py  user_api_key.py
backend/app/observability/: __init__.py  budget.py  callbacks.py  langsmith.py  metrics_collector.py  otel.py
backend/app/prompts/: __init__.py  planner.py  reader.py  searcher.py  writer.py
backend/app/schemas/: __init__.py  auth.py  metrics.py  report.py  research.py
backend/app/services/: __init__.py  metrics_service.py  report_service.py  research_service.py
backend/app/tools/: __init__.py  bs4_extract.py  retry.py  serper_search.py  tavily_extract.py  tavily_search.py
backend/tests/: conftest.py
backend/tests/test_agents/: test_graph.py  test_planner.py
backend/tests/test_api/: test_research.py
backend/tests/test_schemas/: test_research_schemas.py
frontend/: Dockerfile  index.html  (+4 more)
(+23 files in other folders)
